--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "KyotoQuizContext": "Data Source=KyotoQuizContext-d7883ce5-0fa8-4f40-be91-bc96ee20360a.db"
+  }
 }
